# silva

./: .clang-format  .gitignore  .taplo.toml  CMakeLists.txt  CMakePresets.json  action.yml  demo.sh  demo.sh.output  license.md  pixi.toml  readme.md  task_demo.sh  task_demo.sh.output  task_format.sh  task_format_check.sh  task_test.sh  task_test_python.sh  todo.md
.claude/: CLAUDE.md
cmake/: catch2.cmake  fmtlib.cmake  tracy.cmake
cpp/: CMakeLists.txt  config.hpp.in  fern.cpp  fern.hpp  fern.mpp  fern.tpp  parse_axe.cpp  parse_axe.hpp  parse_axe.tpp  parse_infix.cpp  parse_infix.tpp  parse_root.cpp  parse_root.hpp  parse_root.tpp  parse_tree.cpp  parse_tree.hpp  parse_tree.tpp  parse_tree_nursery.cpp  parse_tree_nursery.hpp  seed.cpp  seed.hpp  seed.mpp  seed.tpp  seed_engine.cpp  shunting_yard.cpp  shunting_yard.hpp  shunting_yard.tpp  silva.cpp  silva.hpp  silva.mpp  silva.tpp  tokenization.cpp  tokenization.hpp  tokenization.mpp  tokenization.tpp
cpp/canopy/: any_vector.hpp  any_vector.tpp  array.hpp  array_small.hpp  array_small.tpp  assert.hpp  bit.hpp  byte_sink.cpp  byte_sink.hpp  byte_sink.tpp  byte_source.hpp  const_ptr.hpp  context.hpp  convert.cpp  convert.tpp  customization_point.hpp  delegate.hpp  delegate.tpp  enum.hpp  env_context.cpp  env_context.hpp  env_context.mpp  env_context.tpp  env_context_catch2.tpp  error.cpp  error.hpp  error.tpp  error_level.cpp  error_level.hpp  error_tree.cpp  error_tree.hpp  error_tree.tpp  exec_trace.hpp  exec_trace.tpp  expected.hpp  expected.tpp  file_location.cpp  file_location.hpp  filesystem.cpp  filesystem.hpp  (+55 more)
cpp/gallery/fern/: fern.cpp  fern.mpp  fern.tpp
cpp/gallery/lox/: example.lox  interpreter.cpp  interpreter.hpp  interpreter.mpp  interpreter.tpp  lox.hpp  lox.lox  lox.mpp  lox.seed  lox_interpreter.cpp  lox_interpreter.hpp  lox_interpreter.mpp  lox_interpreter.tpp  lox_value.cpp  lox_value.hpp  value.cpp  value.hpp
cpp/syntax/: fern.cpp  fern.mpp  fern.tpp  fragmentization.cpp  fragmentization.hpp  fragmentization.mpp  fragmentization.tpp  fragmentization_data.cpp  fragmentization_data.hpp  name_id_style.cpp  name_id_style.hpp  parse_axe.cpp  parse_axe.hpp  parse_axe.tpp  parse_tree.cpp  parse_tree.hpp  parse_tree.tpp  parse_tree_nursery.cpp  parse_tree_nursery.hpp  readme.md  seed.cpp  seed.globals.hpp  seed.hpp  seed.lexicon.hpp  seed.mpp  seed.tpp  seed_axe.cpp  seed_axe.hpp  seed_axe.impl.hpp  seed_axe.tpp  seed_engine.cpp  seed_engine.hpp  seed_engine.tpp  seed_interpreter.cpp  seed_interpreter.hpp  seed_interpreter.tpp  seed_tokenizer.cpp  seed_tokenizer.hpp  seed_tokenizer.impl.hpp  seed_tokenizer.tpp  (+26 more)
cpp/zoo/cedar/: book-examples.cedar  cat.cedar  cedar.cpp  cedar.hpp  cedar.mpp  test.cedar
cpp/zoo/fern/: fern.cpp  fern.hpp  fern.lexicon.hpp  fern.mpp  fern.tpp
cpp/zoo/lox/: builtins.cpp  builtins.hpp  bytecode.cpp  bytecode.hpp  bytecode.tpp  bytecode_compiler.cpp  bytecode_compiler.hpp  bytecode_vm.cpp  bytecode_vm.hpp  bytecode_vm.tpp  cactus.hpp  cactus.tpp  dyn_object.cpp  dyn_object.hpp  example.lox  interpreter.cpp  interpreter.hpp  interpreter.tpp  lox.cpp  lox.hpp  lox.lexicon.hpp  lox.lox  lox.mpp  object.cpp  object.hpp  object_pool.hpp  test_suite.cpp  test_suite.hpp  value.cpp  value.hpp
cpp/zoo/toml/: example.toml  toml.hpp  toml.mpp
src/: CMakeLists.txt  fern.cpp  fern.hpp  fern.mpp  fern.tpp  file.cpp  file.hpp  misc.cpp  misc.hpp  misc.tpp  parse_root.cpp  parse_root.hpp  parse_root.tpp  parse_tree.cpp  parse_tree.hpp  parse_tree.tpp  parse_tree_nursery.cpp  parse_tree_nursery.hpp  seed.cpp  seed.hpp  seed.tpp  tokenization.cpp  tokenization.hpp  tokenization.mpp  tokenization.tpp
src/canopy/: assert.cpp  assert.hpp  const_ptr.hpp  context.hpp  convert.cpp  convert.hpp  enum.hpp  env_context.cpp  env_context.hpp  env_context.mpp  env_context.tpp  error.cpp  error.hpp  error.tpp  error_level.hpp  error_tree.hpp  error_tree.tpp  expected.hpp  expected.tpp  field.hpp  filesystem.cpp  filesystem.hpp  hybrid_ptr.hpp  main.hpp  memento.cpp  memento.hpp  memento.tpp  misc.hpp  preprocessor.hpp  small_vector.hpp  source_code.cpp  source_code.hpp  stream_out.hpp  string_or_view.hpp  tree.hpp  tree.tpp  tree_base.hpp  tree_reversed.hpp  tree_reversed.tpp  types.cpp  (+2 more)
(+81 files in other folders)
